--- a/war/css/screen.css
+++ b/war/css/screen.css
@@ -1,9 +1,12 @@
+@import url(http://fonts.googleapis.com/css?family=Cantata+One);
+
 #container {
 	margin: 1em;
 }
 
 body * {
-	color: #333333;	
+	color: #333333;
+	font-family: 'Canatata One';
 }  
 h1 {
 	color: #EE3322;		
@@ -20,4 +23,7 @@ h2{
 	background-color: white;
 	border: 1px solid red;
 	padding: 4px;
+}
+.right {
+	text-align: right;
 }
